--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -1,13 +1,13 @@
 @font-face {
   font-family: 'Inter';
-  src: url('/src/public/fonts/InterTight-VariableFont_wght.ttf') format('ttf'),
-       url('/src/public/fonts/InterTight-Italic-VariableFont_wght.ttf') format('ttf');
-  font-weight: 400;
+  src: url("./fonts/InterVariable.woff2") format("woff2-variations");
+  font-weight: 100 900;
+  font-display: swap;
   font-style: normal;
 }
 
 body {
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+  font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
   margin: 0;
   padding: 20px;
   background: #f5f5f5;
@@ -91,7 +91,6 @@ header {
   z-index: 1000;
   transition: height 0.3s ease;
   max-height: 95vh;
-  resize: vertical;
   overflow-y: auto;
 }
 
@@ -273,10 +272,13 @@ header {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   max-height: calc(100vh - 250px);
   overflow-y: auto;
+  overflow-x: hidden; 
 }
 
 .commits-container {
   margin-top: 10px;
+  overflow-y: hidden;
+  overflow-x: hidden; 
 }
 
 .comparison-header {
@@ -367,6 +369,46 @@ h3 {
   .commit {
     grid-template-columns: 70px 1fr 120px;
   }
+}
+
+.dropdown {
+  position: relative;
+  cursor: pointer;
+  width: 45px;
+  height: 45px;
+  background: linear-gradient(
+    45deg,
+    rgb(183, 0, 255) 20%,
+    rgb(255, 0, 170) 100%
+  );
+  box-shadow: 0 5px 25px rgba(0, 0, 0, 0.363);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.dropdown input {
+  position: absolute;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  z-index: 2;
+}
+
+.dropdown svg {
+  width: 24px;
+  height: 24px;
+  fill: white;
+  transition: transform 0.3s ease;
+  z-index: 1;
+  transform: rotate(180deg);
+}
+
+#comparison-panel:not(.collapsed) .dropdown svg {
+  transform: rotate(0deg);
 }
 
 #comparison-panel.collapsed {
@@ -608,42 +650,4 @@ h3 {
   margin: 0 16px;
 }
 
-.dropdown {
-  position: relative;
-  cursor: pointer;
-  width: 45px;
-  height: 45px;
-  background: linear-gradient(
-    45deg,
-    rgb(183, 0, 255) 20%,
-    rgb(255, 0, 170) 100%
-  );
-  box-shadow: 0 5px 25px rgba(0, 0, 0, 0.363);
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-}
 
-.dropdown input {
-  position: absolute;
-  opacity: 0;
-  width: 100%;
-  height: 100%;
-  cursor: pointer;
-  z-index: 2;
-}
-
-.dropdown svg {
-  width: 24px;
-  height: 24px;
-  fill: white;
-  transition: transform 0.3s ease;
-  z-index: 1;
-  transform: rotate(180deg);
-}
-
-#comparison-panel:not(.collapsed) .dropdown svg {
-  transform: rotate(0deg);
-}
